add SCSS package, add meta tags and font from tilda website

--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Страница службы поддержки АТ. Описание, специалисты, ЧаВо" />
+    <meta property="og:url" content="" />
+    <!--!TODO добавить данные og:url -->
+    <meta property="og:title" content="Служба поддержки АТ" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="" />
+    <!--!TODO добавить данные og:image -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      rel="stylesheet"
+      href="https://static.tildacdn.com/css/fonts-tildasans.css"
+      type="text/css"
+      media="all"
+      onerror="this.loaderr='y';"
+    />
+    <link rel="icon" href="/author_today-favicon.ico" />
+
+    <title>Author.Today</title>
   </head>
   <body>
     <div id="app"></div>
